--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -25,19 +25,13 @@ jobs:
         with:
           python-version: '3.x'
       # Intentionally don't do system updates – let's try to keep this small and fast, if at all possible.
-      - name: Install latest stable rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          default: true
-          override: true
       - name: Install black
         # The setup-python action set default python to python3.x. Note that we are not using system python here.
         run: |
           python -m pip install --upgrade pip
           pip install black flake8
       - name: Check versions
-        run: set +e; echo "== PYTHON =="; python --version; echo "== PYTHON3 =="; python3 --version; echo "== BLACK =="; black --version; echo "== FLAKE8 =="; flake8 --version; echo "== CARGO =="; cargo --version; echo "== RUSTC =="; rustc --version
+        run: set +e; echo "== PYTHON =="; python --version; echo "== PYTHON3 =="; python3 --version; echo "== BLACK =="; black --version; echo "== FLAKE8 =="; flake8 --version; echo "== CARGO =="; cargo --version; echo "== RUSTC =="; rustc --version; echo "== RUSTUP =="; rustup show
 
       - name: Lint Rust code using cargo fmt
         run: cargo fmt --check
