--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -39,6 +39,8 @@ jobs:
         # "E203 whitespace before ':'" → Prefer black's way to format ranges
         # "E501 line too long" → 79 characters is ridiculous; black already does that more reasonably.
         run: git ls-files '*.py' | xargs flake8 --ignore=E203,E501
+      - name: Lint Python code using black
+        run: git ls-files '*.py' | xargs black
 
       - name: Self-test Rust VM
         run: cargo test --all
