--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Lint Rust code using cargo fmt
         run: cargo fmt --check
+      - name: Lint Rust code using cargo clippy
+        run: cargo clippy
       - name: Lint Python code using flake8
         # "E203 whitespace before ':'" → Prefer black's way to format ranges
         # "E501 line too long" → 79 characters is ridiculous; black already does that more reasonably.
