--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -43,6 +43,12 @@ jobs:
         run: git ls-files '*.py' | xargs flake8 --ignore=E203,E501
       - name: Lint Python code using black
         run: git ls-files '*.py' | xargs black
+      - name: Lint VMs for debug statements
+        run: |
+          if git ls-files '*.asm' | xargs grep -n; then
+            echo "ERROR: Published VMs should not contain debug statements."
+            exit 1
+          fi
 
       - name: Self-test Rust VM
         run: cargo test --all
