--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.39", features = ["default", "derive"] }
+enumn = "0.1.14"
 getrandom = "0.3.3"
 lazy_static = "1.5.0"
 
